--- a/css/style.css
+++ b/css/style.css
@@ -63,14 +63,14 @@ font-family: 'Pacifico', cursive;
   }
  #images-section  img {
 
-    width : 300pxpx; 
+    width : 80 px; 
     height : 128px;
     border-radius: 20%;
     border: 50px solid transparent;
     background-color: lightgreen;
    
 display: inline-block;
-    margin-top: 300px;
+    margin-top: 100px;
     margin-left: 200px;
  }
 
@@ -135,4 +135,34 @@ padding: 50px;
 
   width: 1000px;
  
+}
+
+main h1 {
+
+
+  margin-top: 250px;
+  text-align: center;
+font-size: xx-large;
+}
+
+@keyframes blinkAnimation {
+  0% {
+    /*opacity: 1.0;*/
+    color: #000000;
+  }
+  50% {
+    /*opacity: 0;*/
+    color: #ffffff;
+  }
+  100% {
+    /*opacity: 1.0;*/
+    color: #000000;
+  }
+}
+
+.blink {
+  animation-name: blinkAnimation;
+  animation-iteration-count:infinite;
+  animation-timing-function: steps(0.4);
+  animation-duration: 350ms;
 }
